--- a/src/res/layout/activity_main.xml
+++ b/src/res/layout/activity_main.xml
@@ -3,7 +3,21 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:background="#FF011627">
+
+	<EditText
+		android:layout_width="match_parent"
+		android:ems="10"
+		android:layout_height="wrap_content"
+		android:hint="Search book"
+		android:padding="10dp"
+		android:id="@+id/searchBar"
+		android:textColorHint="#FFFFFFFF"
+		android:background="@drawable/input"
+		android:textColor="#FFFFFFFF"
+		android:layout_marginTop="10dp"
+		android:layout_margin="10dp"/>
 
 	<ListView
 		android:layout_width="match_parent"
@@ -13,10 +27,11 @@
 
 	<LinearLayout
 		android:orientation="horizontal"
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:padding="15dp"
-		android:gravity="right">
+		android:gravity="right"
+		android:padding="10dp"
+		android:layout_gravity="right">
 
 		<ImageView
 			android:src="@drawable/add_ico"
