--- a/src/res/layout/edit_item.xml
+++ b/src/res/layout/edit_item.xml
@@ -4,14 +4,26 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical"
-	android:layout_margin="10dp">
+	android:layout_marginLeft="10dp"
+	android:layout_marginRight="10dp">
 
 	<LinearLayout
 		android:orientation="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:padding="15dp"
-		android:gravity="right|center">
+		android:gravity="right|center"
+		android:background="#FF063459"
+		android:padding="35dp">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Edit Book"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:layout_gravity="left"
+			android:textColor="#FFFFFFFF"
+			android:layout_marginBottom="15dp"
+			android:textStyle="bold"/>
 
 		<LinearLayout
 			android:orientation="vertical"
@@ -29,7 +41,8 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Title"
-					android:textAppearance="?android:attr/textAppearanceMedium"/>
+					android:textAppearance="?android:attr/textAppearanceMedium"
+					android:textColor="#FFFFFFFF"/>
 
 			</LinearLayout>
 
@@ -37,7 +50,10 @@
 				android:layout_width="match_parent"
 				android:ems="10"
 				android:layout_height="wrap_content"
-				android:id="@+id/editTitle"/>
+				android:id="@+id/editTitle"
+				android:background="@drawable/input"
+				android:padding="10dp"
+				android:textColor="#FFFFFFFF"/>
 
 		</LinearLayout>
 
@@ -57,7 +73,8 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Author"
-					android:textAppearance="?android:attr/textAppearanceMedium"/>
+					android:textAppearance="?android:attr/textAppearanceMedium"
+					android:textColor="#FFFFFFFF"/>
 
 			</LinearLayout>
 
@@ -65,7 +82,10 @@
 				android:layout_width="match_parent"
 				android:ems="10"
 				android:layout_height="wrap_content"
-				android:id="@+id/editAuthor"/>
+				android:id="@+id/editAuthor"
+				android:background="@drawable/input"
+				android:padding="10dp"
+				android:textColor="#FFFFFFFF"/>
 
 		</LinearLayout>
 
@@ -85,7 +105,8 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Year"
-					android:textAppearance="?android:attr/textAppearanceMedium"/>
+					android:textAppearance="?android:attr/textAppearanceMedium"
+					android:textColor="#FFFFFFFF"/>
 
 			</LinearLayout>
 
@@ -93,31 +114,41 @@
 				android:layout_width="match_parent"
 				android:ems="10"
 				android:layout_height="wrap_content"
-				android:id="@+id/editYear"/>
+				android:id="@+id/editYear"
+				android:inputType="number"
+				android:background="@drawable/input"
+				android:padding="10dp"
+				android:textColor="#FFFFFFFF"/>
 
 		</LinearLayout>
 
 		<LinearLayout
-			android:orientation="vertical"
+			android:orientation="horizontal"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 
 			<Button
-				android:layout_width="match_parent"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Save"
 				android:id="@+id/saveBtn"
 				android:background="@drawable/success_btn"
 				android:textColor="#FFFFFFFF"
-				android:layout_marginBottom="10dp"/>
+				android:layout_marginBottom="10dp"
+				android:padding="10dp"
+				android:layout_weight="1.0"
+				android:layout_marginRight="5dp"/>
 
 			<Button
-				android:layout_width="match_parent"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Delete"
 				android:id="@+id/delBtn"
 				android:background="@drawable/delete_btn"
-				android:textColor="#FFFFFFFF"/>
+				android:textColor="#FFFFFFFF"
+				android:padding="10dp"
+				android:layout_weight="1.0"
+				android:layout_marginLeft="5dp"/>
 
 		</LinearLayout>
 
